--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,6 @@
 version: '2'
 services:
-  web:
+  app:
     build: .
-    command: npm run start
-    volumes:
-      - .:/app/
     ports:
       - '9999:9999'
