--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^8.2.0",
     "ejs": "^3.1.8",
     "express": "^4.17.1",
+    "express-fileupload": "^1.4.0",
     "express-session": "^1.17.3",
     "express-validator": "^6.14.1",
     "inputmask": "^5.0.7",
